# icfpc2016

./: .gitignore  LICENSE  README.md  icfpc2016.cabal  stack.yaml
api_client/: client.rb  key
app/: Main.hs
app/solver/: Main.hs
app/unfold/: Main.hs
checks/: skeletal_assembly
solutions/: solution_4
src/: GraphTypes.hs  Lib.hs  Manipulation.hs  Paper.hs  Problem.hs  Solution.hs  Solver.hs
viewer/: example  viewer.html  viewer.html.erb  viewer.js
